[tool.poetry]
name = "i18web"
version = "0.1.0"
description = "Esteira de tradução"
authors = ["Hildeberto <hildeberto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.61.1"}
sqlalchemy = "^1.3.19"
psycopg2-binary = "^2.8.6"
python-dotenv = "^0.14.0"
pydantic-sqlalchemy = "^0.0.7"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
black = "^20.8b1"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
