[tool.poetry]
name = "i18web"
version = "0.1.0"
description = "Esteira de tradução"
authors = ["Hildeberto <hildeberto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
sqlalchemy = "^1.4.0"
psycopg2-binary = "^2.8.6"
python-dotenv = "^0.21.0"
pydantic-sqlalchemy = "^0.0.7"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
pytest = "^7.1.0"
pytest-cov = "^2.10.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.253"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
